old/_very_old/portworx/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: kube-system
  name: lighthouse
  labels:
    app: lighthouse
  annotations:
    kubernetes.io/ingress.class: traefik
    hajimari.io/enable: "true"
    hajimari.io/icon: "lighthouse-on"
spec:
  rules:
    - host: lighthouse.${SECRET_DOMAIN_INTERNAL}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: px-lighthouse
                port:
                  number: 80
